Final page done

--- a/conocimientos.html
+++ b/conocimientos.html
@@ -65,14 +65,9 @@
               >Gustos</a
             >
             <a
-              class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+              class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 text-gray-900 focus:text-gray-900 bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
               href="./conocimientos.html"
               >Conocimiento</a
-            >
-            <a
-              class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-              href="./futuro.html"
-              >Futuro</a
             >
           </nav>
         </div>
@@ -80,7 +75,184 @@
     </div>
     <!-- End of Navigation bar -->
     <!-- Start of Content -->
-    <div class="flex flex-wrap"></div>
+    <h1 class="text-4xl text-white font-semibold text-center my-4">
+      Conocimientos
+    </h1>
+    <div class="grid place-items-center h-full">
+      <!-- component -->
+
+      <div>
+        <section class="grid grid-cols-1 sm:grid-cols-4 gap-4">
+          <!-- CARD 1 -->
+
+          <!-- END OF CARD 1 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded"
+                src="https://i.blogs.es/8d2420/650_1000_java/1366_2000.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">Java</h3>
+            </div>
+          </div>
+
+          <!-- CARD 2 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1200px-Unofficial_JavaScript_logo_2.svg.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">
+                JavaScript
+              </h3>
+            </div>
+          </div>
+          <!-- END OF CARD 2 -->
+
+          <!-- CARD 3 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded p-3"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/800px-Python-logo-notext.svg.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">Python</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 3 -->
+          <!-- CARD 4 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded p-3"
+                src="https://www.atodocurso.com/sites/default/files/html.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">HTML</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 4 -->
+          <!-- CARD 5 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded p-3"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/React.svg/1200px-React.svg.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">React</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 5 -->
+          <!-- CARD 6 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded p-3"
+                src="https://cdn.freebiesupply.com/logos/large/2x/django-logo-png-transparent.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">Django</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 6 -->
+          <!-- CARD 7 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Sql"
+                class="block h-48 w-full rounded p-3"
+                src="https://cdn-icons-png.flaticon.com/512/2772/2772128.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">SQL</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 7 -->
+          <!-- CARD 7 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Sql"
+                class="block h-48 w-full rounded p-3"
+                src="https://cdn-icons-png.flaticon.com/512/888/888847.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">CSS</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 7 -->
+        </section>
+        <h1 class="text-4xl text-white font-semibold text-center my-4">
+          Idiomas
+        </h1>
+        <section class="flex w-full justify-center space-x-4">
+          <!-- CARD 1 -->
+
+          <!-- END OF CARD 1 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded"
+                src="https://cdn-icons-png.flaticon.com/512/323/323310.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">Inglés</h3>
+            </div>
+          </div>
+
+          <!-- CARD 2 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded"
+                src="https://cdn-icons-png.flaticon.com/512/197/197593.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">Español</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 2 -->
+
+          <!-- CARD 3 -->
+          <div class="bg-gray-800 w-60 shadow-lg rounded-xl p-2">
+            <div class="group relative">
+              <img
+                alt="Placeholder"
+                class="block h-48 w-full rounded p-3"
+                src="https://cdn-icons-png.flaticon.com/512/323/323369.png"
+              />
+            </div>
+            <div class="p-2">
+              <h3 class="text-white py-1 text-base justify-center">Italiano</h3>
+            </div>
+          </div>
+          <!-- END OF CARD 3 -->
+        </section>
+      </div>
+    </div>
     <!-- End of Content -->
   </body>
 </html>
