--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     class="text-yellow-600 text-2xl"
     style="background-color: rgb(1, 22, 41)"
   >
+    <!-- Navigation bar -->
+
     <script
       src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"
       defer
     ></script>
-    <!-- Navigation bar -->
-
     <div class="antialiased bg-gray-100 dark-mode:bg-gray-900">
       <div
         class="w-full text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800"
@@ -69,18 +69,13 @@
               href="./conocimientos.html"
               >Conocimiento</a
             >
-            <a
-              class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-              href="./futuro.html"
-              >Futuro</a
-            >
           </nav>
         </div>
       </div>
     </div>
     <!-- End of Navigation bar -->
     <!-- Start of Content -->
-    <div class="flex flex-wrap">
+    <div class="flex flex-wrap justify-center">
       <div class="p-8">
         <h1 class="text-3xl">Resumen</h1>
         <h2 class="text-white">
